# postgresql-operator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  concierge.yaml  config.yaml  cross_controller_async_replication_test.md  customer_pgaudit_issue.md  diagnose_tls_test.sh  draft_reply_ahmed.md  ext4-storage-setup.md  index.html  issue_691_findings.md  metadata.yaml  output2.txt  patroni.yaml  poetry.toml  pr_description.md  psycopg2-2.9.10-cp310-cp310-linux_x86_64.whl  pyproject.toml  refresh_versions.toml  renovate.json  requirements.txt  run_baseline_test.sh  run_switchover_test.sh  setup_tls_diagnostic.sh  spread.yaml  tox.ini
.github/: .jira_sync_config.yaml  actionlint.yaml  pull_request_template.md  renovate.json5
16_edge/: index.html
1917/: index.html
1928/: index.html
1955/: index.html
1957/: index.html
1973/: index.html
1988/: index.html
1990/: index.html
1993/: index.html
1996/: index.html
2008/: index.html
2013/: index.html
2022/: index.html
2032/: index.html
2040/: index.html
2061/: index.html
2062/: index.html
2084/: index.html
2169/: index.html
2181/: index.html
2185/: index.html
2234/: index.html
2259/: index.html
2278/: index.html
2302/: index.html
2305/: index.html
2309/: index.html
2323/: index.html
2324/: index.html
2330/: index.html
2343/: index.html
2362/: index.html
2408/: index.html
2409/: index.html
2419/: index.html
2452/: index.html
2461/: index.html
2477/: index.html
2478/: index.html
2503/: index.html
2517/: index.html
2522/: index.html
2540/: index.html
2566/: index.html
2570/: index.html
2582/: index.html
2588/: index.html
2593/: index.html
2603/: index.html
2609/: index.html
2611/: index.html
2617/: index.html
2621/: index.html
2628/: index.html
2645/: index.html
2646/: index.html
2656/: index.html
2687/: index.html
2697/: index.html
2752/: index.html
2782/: index.html
2795/: index.html
2875/: index.html
2895/: index.html
2896/: index.html
2897/: index.html
2936/: index.html
2944/: index.html
2947/: index.html
2967/: index.html
2969/: index.html
2992/: index.html
3004/: index.html
3016/: index.html
3056/: index.html
3067/: index.html
3080/: index.html
3089/: index.html
3094/: index.html
3097/: index.html
3107/: index.html
3115/: index.html
3118/: index.html
3125/: index.html
3131/: index.html
3139/: index.html
3144/: index.html
3167/: index.html
3173/: index.html
3177/: index.html
3182/: index.html
3189/: index.html
3195/: index.html
3211/: index.html
3216/: index.html
3240/: index.html
3254/: index.html
3267/: index.html
3272/: index.html
3275/: index.html
3276/: index.html
3285/: index.html
3335/: index.html
3347/: index.html
3351/: index.html
3361/: index.html
3370/: index.html
3380/: index.html
3395/: index.html
3401/: index.html
3408/: index.html
3411/: index.html
3421/: index.html
3427/: index.html
3433/: index.html
3469/: index.html
3480/: index.html
3499/: index.html
3502/: index.html
3508/: index.html
3509/: index.html
3511/: index.html
3513/: index.html
3522/: index.html
3525/: index.html
3526/: index.html
3528/: index.html
3536/: index.html
3545/: index.html
3589/: index.html
3604/: index.html
3616/: index.html
3638/: index.html
3641/: index.html
3645/: index.html
3670/: index.html
3677/: index.html
3685/: index.html
3688/: index.html
3695/: index.html
3704/: index.html
3705/: index.html
3723/: index.html
3724/: index.html
3725/: index.html
3731/: index.html
3733/: index.html
3737/: index.html
3812/: index.html
3859/: index.html
3887/: index.html
3898/: index.html
(+336143 files in other folders)
