# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "unused"  # Charms are not packed as standard Python packages; this information is not used
version = "0.0.0"  # Charms are not packed as standard Python packages; this information is not used
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.43",
    "charm-refresh>=3.1.1.2",
    "charmlibs-interfaces-tls-certificates>=1.6.1",
    "charmlibs-snap>=1.0.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "ops>=3.5.1",
    "pgconnstr>=1.0.1",
    "postgresql-charms-single-kernel>=16.1.7",
    "psutil>=7.2.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pysyncobj>=0.3.14",
    "requests>=2.32.5",
    "tenacity>=9.1.3",
]

[dependency-groups]
build-refresh-version = [
    "charm-refresh-build-version>=0.4.0",
]
charm-libs = [
    "cosl>=0.0.50",  # grafana_agent/v0/cos_agent.py
    "jsonschema",  # certificate_transfer_interface/v0/certificate_transfer.py
    "opentelemetry-exporter-otlp-proto-http==1.21.0",  # tempo_coordinator_k8s/v0/charm_tracing.py
    "ops>=2.0.0",  # data_platform_libs/v0/data_interfaces.py
    "pydantic",  # data_platform_libs/v0/data_models.py
]
format = [
    "ruff>=0.15.0",
]
unit = [
    "coverage[toml]>=7.13.3",
    "jsonschema>=4.26.0",
    "parameterized>=0.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "tomli-w>=1.2.0",
]

[tool.uv]
package = false
default-groups = ["charm-libs", "unit"]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "^2.4.1"
ty = "^0.0.15"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest = "^9.0.2"
pytest-operator = "^0.43.2"
# renovate caret doesn't work: https://github.com/renovatebot/renovate/issues/26940
juju = "<=3.6.1.3"
jubilant = "^1.7.0"
boto3 = "*"
tenacity = "*"
landscape-api-py3 = "^0.9.0"
mailmanclient = "^3.3.5"
psycopg2-binary = "^2.9.11"
allure-pytest = "^2.15.3"
allure-pytest-default-results = "^0.1.3"
tomli = "^2.4.0"
tomli-w = "^1.2.0"

[tool.poetry.group.build-refresh-version]
optional = true

[tool.poetry.group.build-refresh-version.dependencies]
charm-refresh-build-version = "^0.4.0"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["logger\\.debug"]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["juju3", "juju_secrets"]
addopts = "--exitfirst"

# Linting tools configuration
[tool.ruff]
# preview and explicit preview are enabled for CPY001
preview = true
target-version = "py312"
src = ["src", "."]
line-length = 99

[tool.ruff.lint]
explicit-preview-rules = true
select = [
  "A",
  "E",
  "W",
  "F",
  "C",
  "N",
  "D",
  "I001",
  "B",
  "CPY",
  "RUF",
  "S",
  "SIM",
  "UP",
  "TC",
]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "B904",
]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["E501", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  # Asserts
  "B011",
  # Disable security checks for tests
  "S",
]

[tool.ruff.lint.flake8-copyright]
# Check for properly formatted copyright header in each file
author = "Canonical Ltd."
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"
min-file-size = 1

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python = ".tox/lint/"
extra-paths = ["./lib"]

[tool.ty.src]
include = ["src", "scripts"]
exclude = ["tests"]
